change the amazon and netflix url path

--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
                 <div class="portfolio-img">
                   <img src="assets/img/portfolio/netflix.jpg" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="https://hayu-net-clone.netlify.app/" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://net-clone.hayuabera.com/" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
                     
                   </div>
                 </div>
@@ -676,7 +676,7 @@
                   <h4>Netflix clone</h4>
                   <p>Netflix by react</p>
                   <div class="portfolio-tags">
-                    <a href="https://hayu-net-clone.netlify.app/" target="_blank" rel="noopener noreferrer"> <span>Live demo</span></a>
+                    <a href="https://net-clone.hayuabera.com/" target="_blank" rel="noopener noreferrer"> <span>Live demo</span></a>
                     <a href="https://github.com/Hayat-Abera/Netflix-Clone" target="_blank" rel="noopener noreferrer">  <span>github</span></a>
                   </div>
                 </div>
@@ -689,7 +689,7 @@
                 <div class="portfolio-img">
                   <img src="assets/img/portfolio/amazon.jpg" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="https://hayu-amazon-clone.netlify.app/" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://amaz-clone.hayuabera.com/" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
                     
                   </div>
                 </div>
@@ -697,7 +697,7 @@
                   <h4>Amazon clone</h4>
                   <p>Amazon  by react and node</p>
                   <div class="portfolio-tags">
-                    <a href="https://hayu-amazon-clone.netlify.app/" target="_blank" rel="noopener noreferrer"> <span>Live demo</span></a>
+                    <a href="https://amaz-clone.hayuabera.com/" target="_blank" rel="noopener noreferrer"> <span>Live demo</span></a>
                     <a href="https://github.com/Hayat-Abera/My-Amaz-Project" target="_blank" rel="noopener noreferrer">  <span>github</span></a>
                   </div>
                 </div>
